--- a/booked.html
+++ b/booked.html
@@ -70,9 +70,10 @@
       }
 
       .image {
-        height: 350px;
+        height: 300px;
         overflow: hidden;
         object-fit: cover;
+        width: 100%;
       }
       .details {
         margin-left: 50px;
@@ -148,7 +149,7 @@
     </div>
 
     <div class="image">
-      <img src="images/person in wheelchair.jpg" height="870" width="auto" />
+      <img src="images/person in wheelchair.jpg" height="890" width="auto" />
     </div>
 
     <div class="details">
